# Point-cloud-learning-record

./: README.md
1.读取点云数据/PCL/1.IO_txt/: CMakeLists.txt  chair.txt  io.cpp
1.读取点云数据/PCL/2.IO_pcd/: CMakeLists.txt  IO_pcd.cpp
1.读取点云数据/open3d/: read_pcd.py  read_txt.py
1.读取点云数据/open3d/2.read_pcd/: read_pcd.py
2.可视化/PCL/1.cloud_viewer/: CMakeLists.txt  cloud_viewer.cpp
2.可视化/PCL/2.PCLVisualizer/: CMakeLists.txt  PCLVisualizer.cpp
2.可视化/open3d/1.visualization_txt/: visualization_txt.py
2.可视化/open3d/2.visualization_pcd/: visualization_pcd.py
